- Fix for PM Tech Stuff - Backlog row 70 - Partial Fix for PM Tech Stuff - Backlog row 69

--- a/src/classes/CreateObjectsAndFieldsQueueable.cls
+++ b/src/classes/CreateObjectsAndFieldsQueueable.cls
@@ -26,18 +26,36 @@ public with sharing class CreateObjectsAndFieldsQueueable implements Queueable, 
 			}
 		}
 
-		List<String> fieldCreationErrors = SF_MetadataUtils.createField(fieldToCreate, this.sessionId);
+		if(SF_MetadataUtils.fieldExists(fieldToCreate.ObjectName, fieldToCreate.Name)){
+			List<String> assignmentAccessErrors = SF_MetadataUtils.assignAccessToField(fieldToCreate.ObjectName, fieldToCreate.Name);
+			
+			if(assignmentAccessErrors.size() > 0){
+				String errors = '';
+			
+				for(String err: assignmentAccessErrors){
+					errors += err + '.';
+				}
 
-		if(fieldCreationErrors.size() > 0){
-			String errors = '';
-		
-			for(String err: fieldCreationErrors){
-				errors += err + '.';
+				System.debug('Field permissions errors: ' + errors);
+				throw new WaveConfiguratorException('A field could not be granted. Cause: ' + errors);
+			
 			}
 
-			System.debug('Field Creation errors: ' + errors);
-			throw new WaveConfiguratorException('A field could not be created. Cause: ' + errors);
+		}
+		else{
+			List<String> fieldCreationErrors = SF_MetadataUtils.createField(fieldToCreate, this.sessionId);
 			
+			if(fieldCreationErrors.size() > 0){
+				String errors = '';
+			
+				for(String err: fieldCreationErrors){
+					errors += err + '.';
+				}
+
+				System.debug('Field Creation errors: ' + errors);
+				throw new WaveConfiguratorException('A field could not be created. Cause: ' + errors);
+			
+			}
 		}
 
     }
