- Removed dependency of External_Id__c from User object in code. - Solved create objects and fields

--- a/src/classes/CreateObjectsAndFieldsQueueable.cls
+++ b/src/classes/CreateObjectsAndFieldsQueueable.cls
@@ -20,27 +20,28 @@ public with sharing class CreateObjectsAndFieldsQueueable implements Queueable, 
 					errors += err + '.';
 				}
 
-				System.debug('Object Creation errors: ' + errors);
 				throw new WaveConfiguratorException('An object could not be created. Cause: ' + errors);
 
 			}
 		}
 
 		if(SF_MetadataUtils.fieldExists(fieldToCreate.ObjectName, fieldToCreate.Name)){
-			List<String> assignmentAccessErrors = SF_MetadataUtils.assignAccessToField(fieldToCreate.ObjectName, fieldToCreate.Name);
 			
-			if(assignmentAccessErrors.size() > 0){
-				String errors = '';
+			if(!fieldToCreate.IsRequired){
+				List<String> assignmentAccessErrors = SF_MetadataUtils.assignAccessToField(fieldToCreate.ObjectName, fieldToCreate.Name, this.sessionId);
 			
-				for(String err: assignmentAccessErrors){
-					errors += err + '.';
-				}
+				if(assignmentAccessErrors.size() > 0){
+					String errors = '';
+				
+					for(String err: assignmentAccessErrors){
+						errors += err + '.';
+					}
 
-				System.debug('Field permissions errors: ' + errors);
-				throw new WaveConfiguratorException('A field could not be granted. Cause: ' + errors);
-			
+					throw new WaveConfiguratorException('A field could not be granted. Cause: ' + errors);
+				
+				}	
 			}
-
+			
 		}
 		else{
 			List<String> fieldCreationErrors = SF_MetadataUtils.createField(fieldToCreate, this.sessionId);
@@ -52,7 +53,6 @@ public with sharing class CreateObjectsAndFieldsQueueable implements Queueable, 
 					errors += err + '.';
 				}
 
-				System.debug('Field Creation errors: ' + errors);
 				throw new WaveConfiguratorException('A field could not be created. Cause: ' + errors);
 			
 			}
